no leaderboard, time in workouts is not saved properly, need to fix - on mobile workout cards in CalendarPage.tsx, fix FriendsPage.tsx

--- a/package.json
+++ b/package.json
@@ -1,92 +1,95 @@
 {
-  "name": "trainsync",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "start": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "tunnel": "vk-tunnel --http-protocol=http --host=localhost --port=5173",
-    "deploy": "vite build && vk-miniapps-deploy"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^5.2.1",
-    "@radix-ui/react-accordion": "^1.2.12",
-    "@radix-ui/react-alert-dialog": "^1.1.15",
-    "@radix-ui/react-aspect-ratio": "^1.1.7",
-    "@radix-ui/react-avatar": "^1.1.10",
-    "@radix-ui/react-checkbox": "^1.3.3",
-    "@radix-ui/react-collapsible": "^1.1.12",
-    "@radix-ui/react-context-menu": "^2.2.16",
-    "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-dropdown-menu": "^2.1.16",
-    "@radix-ui/react-hover-card": "^1.1.15",
-    "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-menubar": "^1.1.16",
-    "@radix-ui/react-navigation-menu": "^1.2.14",
-    "@radix-ui/react-popover": "^1.1.15",
-    "@radix-ui/react-progress": "^1.1.7",
-    "@radix-ui/react-radio-group": "^1.3.8",
-    "@radix-ui/react-scroll-area": "^1.2.10",
-    "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slider": "^1.3.6",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-switch": "^1.2.6",
-    "@radix-ui/react-tabs": "^1.1.13",
-    "@radix-ui/react-toast": "^1.2.15",
-    "@radix-ui/react-toggle": "^1.1.10",
-    "@radix-ui/react-toggle-group": "^1.1.11",
-    "@radix-ui/react-tooltip": "^1.2.8",
-    "@vkontakte/icons": "^3.1.1",
-    "@vkontakte/vk-bridge": "^2.13.0",
-    "@vkontakte/vk-bridge-react": "^1.0.1",
-    "@vkontakte/vk-mini-apps-router": "^1.7.6",
-    "@vkontakte/vkui": "^7.0.0",
-    "axios": "^1.11.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.1.1",
-    "date-fns": "^4.1.0",
-    "embla-carousel-react": "^8.6.0",
-    "framer-motion": "^12.23.12",
-    "input-otp": "^1.4.2",
-    "lucide-react": "^0.539.0",
-    "mobx": "^6.13.7",
-    "mobx-react-lite": "^4.1.0",
-    "next-themes": "^0.4.6",
-    "react": "^18.2.0",
-    "react-day-picker": "^9.8.1",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.62.0",
-    "react-resizable-panels": "^3.0.4",
-    "recharts": "^3.1.2",
-    "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1",
-    "vaul": "^1.1.2"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
-    "@vitejs/plugin-legacy": "^5.3.1",
-    "@vitejs/plugin-react": "^4.2.1",
-    "@vkontakte/vk-miniapps-deploy": "^0.1.6",
-    "@vkontakte/vk-tunnel": "^0.2.4",
-    "autoprefixer": "^10.4.21",
-    "eruda": "^3.0.1",
-    "esbuild": "~0.20.0",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
-    "terser": "^5.4.0",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.8"
-  }
+    "name": "trainsync",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "start": "vite",
+        "build": "tsc && vite build",
+        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "preview": "vite preview",
+        "tunnel": "vk-tunnel --http-protocol=http --host=localhost --port=5173",
+        "deploy": "vite build && vk-miniapps-deploy"
+    },
+    "dependencies": {
+        "@hookform/resolvers": "^5.2.1",
+        "@radix-ui/react-accordion": "^1.2.12",
+        "@radix-ui/react-alert-dialog": "^1.1.15",
+        "@radix-ui/react-aspect-ratio": "^1.1.7",
+        "@radix-ui/react-avatar": "^1.1.10",
+        "@radix-ui/react-checkbox": "^1.3.3",
+        "@radix-ui/react-collapsible": "^1.1.12",
+        "@radix-ui/react-context-menu": "^2.2.16",
+        "@radix-ui/react-dialog": "^1.1.15",
+        "@radix-ui/react-dropdown-menu": "^2.1.16",
+        "@radix-ui/react-hover-card": "^1.1.15",
+        "@radix-ui/react-icons": "^1.3.2",
+        "@radix-ui/react-label": "^2.1.7",
+        "@radix-ui/react-menubar": "^1.1.16",
+        "@radix-ui/react-navigation-menu": "^1.2.14",
+        "@radix-ui/react-popover": "^1.1.15",
+        "@radix-ui/react-progress": "^1.1.7",
+        "@radix-ui/react-radio-group": "^1.3.8",
+        "@radix-ui/react-scroll-area": "^1.2.10",
+        "@radix-ui/react-select": "^2.2.6",
+        "@radix-ui/react-separator": "^1.1.7",
+        "@radix-ui/react-slider": "^1.3.6",
+        "@radix-ui/react-slot": "^1.2.3",
+        "@radix-ui/react-switch": "^1.2.6",
+        "@radix-ui/react-tabs": "^1.1.13",
+        "@radix-ui/react-toast": "^1.2.15",
+        "@radix-ui/react-toggle": "^1.1.10",
+        "@radix-ui/react-toggle-group": "^1.1.11",
+        "@radix-ui/react-tooltip": "^1.2.8",
+        "@vkontakte/icons": "^3.1.1",
+        "@vkontakte/vk-bridge": "^2.13.0",
+        "@vkontakte/vk-bridge-react": "^1.0.1",
+        "@vkontakte/vk-mini-apps-router": "^1.7.6",
+        "@vkontakte/vkui": "^7.0.0",
+        "axios": "^1.11.0",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "cmdk": "^1.1.1",
+        "date-fns": "^4.1.0",
+        "dotenv": "^17.2.1",
+        "embla-carousel-react": "^8.6.0",
+        "framer-motion": "^12.23.12",
+        "input-otp": "^1.4.2",
+        "lucide-react": "^0.539.0",
+        "mobx": "^6.13.7",
+        "mobx-react-lite": "^4.1.0",
+        "next-themes": "^0.4.6",
+        "pocketbase": "^0.26.2",
+        "react": "^18.2.0",
+        "react-day-picker": "^9.8.1",
+        "react-dom": "^18.2.0",
+        "react-hook-form": "^7.62.0",
+        "react-resizable-panels": "^3.0.4",
+        "recharts": "^3.1.2",
+        "sonner": "^2.0.7",
+        "tailwind-merge": "^3.3.1",
+        "vaul": "^1.1.2"
+    },
+    "devDependencies": {
+        "@types/node": "^24.3.0",
+        "@types/react": "^18.2.43",
+        "@types/react-dom": "^18.2.17",
+        "@typescript-eslint/eslint-plugin": "^6.14.0",
+        "@typescript-eslint/parser": "^6.14.0",
+        "@vitejs/plugin-legacy": "^5.3.1",
+        "@vitejs/plugin-react": "^4.2.1",
+        "@vkontakte/vk-miniapps-deploy": "^0.1.6",
+        "@vkontakte/vk-tunnel": "^0.2.4",
+        "autoprefixer": "^10.4.21",
+        "eruda": "^3.0.1",
+        "esbuild": "~0.20.0",
+        "eslint": "^8.55.0",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.4.5",
+        "postcss": "^8.5.6",
+        "tailwindcss": "^3.4.17",
+        "terser": "^5.4.0",
+        "typescript": "^5.2.2",
+        "vite": "^5.0.8"
+    }
 }
