--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
         "react-day-picker": "^9.8.1",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.62.0",
+        "react-paginate": "^8.3.0",
         "react-resizable-panels": "^3.0.4",
         "recharts": "^3.1.2",
         "sonner": "^2.0.7",
